--- a/amen-jet.html/src/index.css
+++ b/amen-jet.html/src/index.css
@@ -14,3 +14,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+@layer components {
+  .btns {
+    @apply px-10 py-5 w-fit mx-auto bg-primary2 relative after:absolute after:w-full after:scale-[0.3] after:aspect-square after:rounded-full after:bg-circle after:-right-2 after:-bottom-7 after:translate-x-20 after:translate-y-10 overflow-hidden hover:after:scale-150 after:transition-all after:duration-700 ease-in-out text-white font-krub font-semibold text-base z-50 after:-z-30;
+  }
+}
